deps/v8/test/message/fail/import-blah-module.out
*%(basename)s:5: SyntaxError: Unexpected token '{'
(import{blah})
       ^
SyntaxError: Unexpected token '{'
